--- a/Project/src/main/resources/templates/stranicaOglasa.html
+++ b/Project/src/main/resources/templates/stranicaOglasa.html
@@ -16,19 +16,20 @@
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body class="ostaleStrane" onload="ucitajdetaljno()">
+<body class="ostaleStrane" onload="ucitajdetaljno();srediNavbar();">
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="http://localhost:8080/#page-top">Lako do posla</a>
+            <a class="navbar-brand" href="http://localhost:8080/">Lako do posla</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      Menu
-      <i class="fas fa-bars"></i>
-    </button>
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/oglasi">Oglasi</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/profile">Profil</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/">Početna</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/oglasi?tag=0&mesto=0">Oglasi</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#about">O nama</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#contact">Kontakt</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a id="login" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin">Prijavi se</a></li>
                 </ul>
             </div>
         </div>
