--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -11268,3 +11268,17 @@
 				border-radius: 5px; 
 				overflow: auto;
 			}
+            #novOglasBack {
+                color : #1abc9c;
+                position : relative;
+                float : left;
+                border : 2px solid #1abc9c;
+                border-radius : 5px;
+                padding : 0px 10px 0px 10px;
+            }
+            #novOglasBack a {
+                text-decoration: none;
+            }
+            #novOglasTitle {
+                width : 100px;
+            }
