--- a/Project/src/main/resources/templates/novOglas.html
+++ b/Project/src/main/resources/templates/novOglas.html
@@ -67,7 +67,7 @@
                             <div class="col-lg-6 login-btm login-text">
                             </div>
                             <div class="dugme">
-                                <button type="button" class="btn btn-outline-primary" onclick="signup()">Postavi oglas</button>
+                                <button type="button" class="btn btn-outline-primary" onclick="dodajoglas()">Postavi oglas</button>
                             </div>
                         </div>
                     </form>
