--- a/Project/src/main/resources/templates/poslodavci.html
+++ b/Project/src/main/resources/templates/poslodavci.html
@@ -37,10 +37,11 @@
     </nav>
 
     <div class="container py-5">
-
+        <div style="position: relative; margin-top: 50px;">
+        </div>
         <div class="row text-center text-white mb-1">
             <div class="col-lg-7 mx-auto ">
-                <h1 class="display-4">Rezultat pretrage: </h1>
+                <h1 class="display-4">Lista poslodavaca: </h1>
             </div>
         </div>
 
