--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -11,7 +11,7 @@
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body class="ostaleStrane" onload="popuniProfil(); Dajgradove(); srediNavbar();">
+<body class="ostaleStrane" onload="popuniProfil(); Dajgradove(); srediNavbar(); oglasiPrijave();">
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="http://localhost:8080/">Lako do posla</a>
@@ -90,17 +90,7 @@
             </div>
             
             <div id="profile-oglasi">
-                <div class="profile-oglas">
-                    <a href='profil.html' >
-                        <h5>
-                            <i class='fas fa-building'></i> <span> Poslodavac: </span>
-
-                        </h5>
-                    </a>
-                    <p id='Lokacija'><span><i class='fas fa-map-marker-alt'></i> Lokacija: </p></span>
-                    <button type="button" class="btn btn-outline-primary" style="float : left; width : 48%;">Detaljnije</button>
-                    <button type="button" class="btn btn-outline-primary" style="float : right; width : 48%;">Odjavi se</button>
-                </div>
+                
             </div>
         </div>
         
