--- a/Project/src/main/resources/templates/poslodavci.html
+++ b/Project/src/main/resources/templates/poslodavci.html
@@ -16,7 +16,7 @@
     <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
-<body class="ostaleStrane" onload="srediNavbar();">
+<body class="ostaleStrane" onload="srediNavbar();poslodavci();">
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="http://localhost:8080/">Lako do posla</a>
@@ -37,18 +37,8 @@
     </nav>
 
     <div class="container py-5">
-        <div style="position: relative; margin-top: 50px;">
-        </div>
-        <div class="row text-center text-white mb-1">
-            <div class="col-lg-7 mx-auto ">
-                <h1 class="display-4">Lista poslodavaca: </h1>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-12 mx-auto" id="poslodavci">
-
-            </div>
+        <div class="row" id="poslodavci-box">
+            
         </div>
     </div>
     <footer class="footer text-center ">
