--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -11232,6 +11232,7 @@
                 margin-top : 130px; 
 				margin-bottom: 20px;
                 margin-left : 5%;
+                padding-top : 10px;
                 width : 65%;
                 background: #2c3e50;
                 box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
