--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -11233,6 +11233,7 @@
 				margin-bottom: 20px;
                 margin-left : 5%;
                 padding-top : 10px;
+                padding-bottom : 10px;
                 width : 65%;
                 background: #2c3e50;
                 box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
