--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -91,7 +91,7 @@
                 <div class="col-lg-3 col-md-2"></div>
             </div>
             
-            <div class="row" id="profile-oglasi">
+            <div id="profile-oglasi">
                 
             </div>
         </div>
