--- a/Project/src/main/resources/static/css/style.css
+++ b/Project/src/main/resources/static/css/style.css
@@ -5263,7 +5263,8 @@
                 padding: 0.5rem 1rem;
                 color: #212529;
                 text-decoration: none;
-                background-color: #fff;
+                /*background-color: #fff;*/
+				background-color:#ebfffb; 
                 border: 0.125rem solid rgba(0, 0, 0, 0.125);
             }
             
@@ -11103,15 +11104,14 @@
             .list-group-item:last-child {
                 margin: 20px 20px 20px 20px;
             }
-
+            
             .lajkDislajk {
-                width : 130px;
+                width: 130px;
             }
-
+            
             #dugmeDetalji {
-                width : 130px;
+                width: 130px;
             }
-
             /*OGLAS*/
             
             #stranicaOglasa {
@@ -11147,7 +11147,7 @@
             }
             
             .dugme {
-                margin : 5px;
+                margin: 5px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -11189,18 +11189,18 @@
                 margin: 10px auto;
                 height: 10%;
             }
-			
-			/*PROFILE FORM*/
-			.profile-box {
+            /*PROFILE FORM*/
+            
+            .profile-box {
                 position: relative;
-				float: left; 
-                margin-top : 130px; 
-				margin-bottom: 20px; 
+                float: left;
+                margin-top: 130px;
+                margin-bottom: 20px;
                 background: #2c3e50;
                 text-align: center;
                 box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
                 border-radius: 20px;
-				width: 30%; 
+                width: 30%;
             }
             
             .profile-user {
@@ -11225,52 +11225,51 @@
                 margin-top: 10px;
                 text-align: left;
             }
-
+            
             #profile-oglasi {
-                position : relative;
-                float : right;
-                margin-top : 130px; 
-				margin-bottom: 20px;
-                margin-left : 5%;
-                padding-top : 10px;
-                padding-bottom : 10px;
-                width : 65%;
+                position: relative;
+                float: right;
+                margin-top: 130px;
+                margin-bottom: 20px;
+                margin-left: 5%;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                width: 65%;
                 background: #2c3e50;
                 box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
                 border-radius: 20px;
             }
-
+            
             .profile-oglas {
-                position : relative;
-                float : left;
-                margin : 1%;
-                padding : 10px;
-                width : 48%;
-                height : 160px;
-                background-color : white;
-                border : 3px solid #0DB8DE;
-                border-radius : 5px;
-                color : #0DB8DE;
+                position: relative;
+                float: left;
+                margin: 1%;
+                padding: 10px;
+                width: 48%;
+                height: 160px;
+                background-color: white;
+                border: 3px solid #0DB8DE;
+                border-radius: 5px;
+                color: #0DB8DE;
             }
-
+            
             .profile-oglas a {
                 text-decoration: none;
             }
-
-            .profile-oglas button:hover {
-                background-color : #0DB8DE;
-            }
             
-			/*NOVI OGLAS*/
-			
-			.novioglas-box {
+            .profile-oglas button:hover {
+                background-color: #0DB8DE;
+            }
+            /*NOVI OGLAS*/
+            
+            .novioglas-box {
                 position: relative;
                 margin: 20px;
                 background: #2c3e50;
                 text-align: center;
                 box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
                 border-radius: 20px;
-				height: 940px; 
+                height: 940px;
             }
             
             .novioglas-user {
@@ -11307,59 +11306,68 @@
                 padding-left: 0px;
                 color: #A2A4A4;
             }
-            #novioglas-opis{
-				position: relative; 
-				width: 100%; 
-				height: 40%; 
-				border-radius: 5px; 
-				overflow: auto;
-			}
-            #novOglasBack {
-                color : #1abc9c;
-                position : relative;
-                float : left;
-                font-size : 60px;
-                line-height: 0.6em;
-                border : 2px solid #1abc9c;
-                border-radius : 5px;
-                padding : 0px 10px 10px 10px;
+            
+            #novioglas-opis {
+                position: relative;
+                width: 100%;
+                height: 40%;
+                border-radius: 5px;
+                overflow: auto;
             }
+            
+            #novOglasBack {
+                color: #1abc9c;
+                position: relative;
+                float: left;
+                font-size: 60px;
+                line-height: 0.6em;
+                border: 2px solid #1abc9c;
+                border-radius: 5px;
+                padding: 0px 10px 10px 10px;
+            }
+            
             #novOglasBack a {
                 text-decoration: none;
             }
+            
             #novOglasTitle {
-                margin-right : 70px;
+                margin-right: 70px;
             }
-
             /*POSLODAVCI*/
-
+            
             #poslodavci-box {
-                position : relative;
-                margin : auto;
-                margin-top : 130px; 
-				margin-bottom: 20px; 
+                position: relative;
+                margin: auto;
+                margin-top: 130px;
+                margin-bottom: 20px;
                 background: #2c3e50;
                 box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
                 border-radius: 20px;
-				width: 100%; 
-                color : white;
-                padding : 10px
+                width: 100%;
+                color: white;
+                padding: 10px
             }
-
+            
             .poslodavac {
-                position : relative;
-                float : left;
-                padding : 10px;
-                width : 48%;
-                margin : 12px;
-                height : 200px;
-                background-color : white;
-                border : 3px solid #0DB8DE;
-                border-radius : 5px;
-                color : #0DB8DE;
+                position: relative;
+                float: left;
+                padding: 10px;
+                width: 48%;
+                margin: 12px;
+                height: 200px;
+                background-color: white;
+                border: 3px solid #0DB8DE;
+                border-radius: 5px;
+                color: #0DB8DE;
             }
-
+            
             .poslodavac button {
-                margin-left : 150px;
+                margin-left: 150px;
             }
-
+			.kanta{
+				position: relative; 
+				float:right;
+				margin: 10px; 
+				width: 20%; 
+				height: 5%; 
+			}
