--- a/Project/src/main/resources/templates/index.html
+++ b/Project/src/main/resources/templates/index.html
@@ -27,12 +27,14 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/oglasi?tag=0&mesto=0">Oglasi</a></li>
+                    <!--<li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/oglasi?tag=0&mesto=0">Oglasi</a></li>-->
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/poslodavci">Poslodavci</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#about">O nama</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#contact">Kontakt</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a id="navProfil" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/profil">Profil</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a></li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -55,14 +57,16 @@
 
             <div class="container" id="filters">
                 <div class="row" id="filter-main-row">
-                    <div class="col-sm-5">
+                    <!--<div class="col-sm-5">
                         <input class="filter-main" type="search" placeholder="Pretraži">
+                </div> -->
+                    <div class="col-sm-1">
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-5">
                         <select id="tagovi" class="filter-main" value="Odaberite oblast rada">
                             </select>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-5">
                         <select id="city-register" class="filter-main" value="Odaberite lokaciju">
                             <option value="0">Svi gradovi</option>
                             </select>
@@ -188,78 +192,7 @@
         </div>
     </section>
     <!-- Contact Section-->
-    <section class="page-section" id="contact">
-        <div class="container">
-            <!-- Contact Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">kontaktirajte nas</h2>
-            <!-- Icon Divider-->
-            <div class="divider-custom">
-                <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fas fa-id-card-alt"></i></div>
-                <div class="divider-custom-line"></div>
-            </div>
-            <!-- Contact Section Form-->
-            <div class="row justify-content-center">
-                <div class="col-lg-8 col-xl-7">
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
-                    <form id="ccontactForm" data-sb-form-api-token="API_TOKEN">
-                        <!-- Name input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="name" type="text" placeholder="Unesite ime i prezime ..." data-sb-validations="required" />
-                            <label for="name">Ime i prezime</label>
-                            <div class="invalid-feedback" data-sb-feedback="name:required">Neophodno je da unesete ime i prezime!</div>
-                        </div>
-                        <!-- Email address input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="email" type="email" placeholder="korisnickoime@domen.com" data-sb-validations="required,email" />
-                            <label for="email">Email adresa</label>
-                            <div class="invalid-feedback" data-sb-feedback="email:required">Neophodno je da unesete email adresu!</div>
-                            <div class="invalid-feedback" data-sb-feedback="email:email">Email adresa nije validna!</div>
-                        </div>
-                        <!-- Phone number input-->
-                        <div class="form-floating mb-3">
-                            <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                            <label for="phone">Broj telefona</label>
-                            <div class="invalid-feedback" data-sb-feedback="phone:required">Neophodno je da unesete validan broj telefona!</div>
-                        </div>
-                        <!-- Message input-->
-                        <div class="form-floating mb-3">
-                            <textarea class="form-control" id="message" type="text" placeholder="Unesite tekst poruke..." style="height: 10rem" data-sb-validations="required"></textarea>
-                            <label for="message">Poruka</label>
-                            <div class="invalid-feedback" data-sb-feedback="message:required">Neophodno je da unesete tekst poruke! </div>
-                        </div>
-                        <!-- Submit success message-->
-                        <!---->
-                        <!-- This is what your users will see when the form-->
-                        <!-- has successfully submitted-->
-                        <div class="d-none" id="submitSuccessMessage">
-                            <div class="text-center mb-3">
-                                <div class="fw-bolder">Uspešno ste poslali poruku!</div>
-                                To activate this form, sign up at
-                                <br />
-                                <!-- <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>-->
-                            </div>
-                        </div>
-                        <!-- Submit error message-->
-                        <!---->
-                        <!-- This is what your users will see when there is-->
-                        <!-- an error submitting the form-->
-                        <div class="d-none" id="submitErrorMessage">
-                            <div class="text-center text-danger mb-3">Neuspešno slanje poruke!</div>
-                        </div>
-                        <!-- Submit Button-->
-                        <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Pošalji poruku</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <!-- Footer-->
     <footer class="footer text-center">
         <div class="container">
