--- a/Project/src/main/resources/templates/sviOglasi.html
+++ b/Project/src/main/resources/templates/sviOglasi.html
@@ -30,7 +30,9 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#about">O nama</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/#contact">Kontakt</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a id="navProfil" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/profil">Profil</a></li>
-                    <li class="nav-item mx-0 mx-lg-1"><a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a></li>
+                    <li class="nav-item mx-0 mx-lg-1">
+                        <a id="navLogin" class="nav-link py-3 px-0 px-lg-3 rounded" href="http://localhost:8080/signin"></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -41,13 +43,13 @@
         </div>
         <div class="filters" id="pretraga" style="position: relative;">
             <div class="row filter-main-row">
-                <div class="col-sm-5">
+                <div class="col-sm-5" style="padding: auto">
                     <input class="filter-main" type="search" placeholder="Pretraži">
                 </div>
                 <div class="col-sm-3">
                     <select class="filter-main" id="tagovi" value="Odaberite oblast rada" onchange="promeniurl()">
                         <option value="0">---- Sve ----</option>
-                        </select>
+                    </select>
                 </div>
                 <div class="col-sm-3">
                     <select class="filter-main" id="city-register" value="Odaberite lokaciju" onchange="promeniurl()">
