--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -51,6 +51,16 @@
                     <div class="col-lg-12 profile-form">
                         <form>
                             <div class="form-group">
+                                <label id="prosecna" class="form-control-label">Prosecna ocena : </label>
+                                <div id="ocene">
+                                    <p id="petice">Petice : </p>
+                                    <p id="petice">Cetvorke : </p>
+                                    <p id="petice">Trojke : </p>
+                                    <p id="petice">Dvojke : </p>
+                                    <p id="petice">Jedinice : </p>
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <label class="form-control-label">Ime i prezime</label>
                                 <input type="text" value="Ime i Prezime" id="profil-ime" name="ime" class="form-control">
                             </div>
