--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -54,10 +54,10 @@
                                 <label id="prosecna" class="form-control-label">Prosecna ocena : </label>
                                 <div id="ocene">
                                     <p id="petice">Petice : </p>
-                                    <p id="petice">Cetvorke : </p>
-                                    <p id="petice">Trojke : </p>
-                                    <p id="petice">Dvojke : </p>
-                                    <p id="petice">Jedinice : </p>
+                                    <p id="cetvorke">Cetvorke : </p>
+                                    <p id="trojke">Trojke : </p>
+                                    <p id="dvojke">Dvojke : </p>
+                                    <p id="jedinice">Jedinice : </p>
                                 </div>
                             </div>
                             <div class="form-group">
