--- a/Project/src/main/resources/templates/sviOglasi.html
+++ b/Project/src/main/resources/templates/sviOglasi.html
@@ -65,7 +65,7 @@
 
         <div class="row text-center text-white mb-1">
             <div class="col-lg-7 mx-auto ">
-                <h1 class="display-4">Rezultat pretrage: </h1>
+                <h2 class="display-5" style="color: #2c3e50;">Rezultat pretrage: </h2>
             </div>
         </div>
 
