--- a/Project/src/main/resources/templates/profil.html
+++ b/Project/src/main/resources/templates/profil.html
@@ -53,8 +53,8 @@
                             <div class="form-group">
                                 <label id="prosecna" class="form-control-label" style="padding-left: 10px">Prosečna ocena : </label>
                                 <div id="ocene" style="margin: 0; padding-top: 0; padding :10px; background-color: inherit; border: none; ">
-                                    <ul id=" petice " style="padding:0%; margin:0px5px ; ">
-                                        <li style="display: inline;"><i class="fas fa-star " style="color: #1abc9c; "></i></li>
+                                    <ul id=" petice " style="padding:0%; margin:5px ; ">
+                                        <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
                                         <li style="display: inline; "><i class="fas fa-star " style="color: #1abc9c; "></i></li>
